# langchain_study

./: README.md
langchain_project/: .gitignore  README.md  main.py  pyproject.toml  test.ipynb
langchain_project/chroma_db/: chroma.sqlite3
langchain_project/data/: 테슬라_KR.txt
langchain_project/src/langchain_project/api/: main.py
langchain_project/src/langchain_project/api/chroma_db/: chroma.sqlite3
langchain_project/src/langchain_project/data/: 테슬라_KR.txt
langchain_project/src/langchain_project/study/실습파일/: LangChain_001_SimpleRAG.ipynb  LangChain_003_Data_Processing.ipynb  LangChain_005_Advanced_Retrieval.ipynb
langchain_project/src/langchain_project/study/실습파일/chroma_db/: chroma.sqlite3
langchain_project/src/langchain_project/study/실습파일/data/: Rivian_EN.txt  Tesla_EN.txt  qa_test.xlsx  qa_test_revised.xlsx  리비안_KR.txt
langchain_project/src/langchain_project/temp/데이터/: final_docs.jsonl  final_docs_ver2.jsonl  kakao_chat.json  kakao_chat.jsonl  kbo_teams_2023.csv  테슬라_KR.txt
langchain_project/src/langchain_project/temp/실습파일/: LangChain_001_SimpleRAG.ipynb  LangChain_002_SimpleRAG_LCEL.ipynb  LangChain_004_Vectorstore_Retrieval.ipynb  LangChain_006_Generation_Evaluation.ipynb
